--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,100 @@ ul {
   list-style: none;
 }
 
+#main-banner .nav-container-navbar li a, #main-banner .nav-container .brand {
+  transition: 0.3s;
+}
+#main-banner .nav-container-navbar li a:hover, #main-banner .nav-container .brand:hover {
+  color: #ff5200;
+}
+
+.title-container h1, .title-container h2 {
+  text-shadow: 3px 2px #000000;
+}
+
+.btn {
+  padding: 0.6rem 1rem;
+  border: 1px solid #ffffff;
+  text-transform: uppercase;
+  border-radius: 5px;
+  transition: 0.3s;
+  color: #ffffff;
+}
+.btn:hover {
+  border-color: #ff5200;
+  color: #ff5200;
+}
+.btn-primary {
+  background: #ff5200;
+  border-color: #ff5200;
+}
+.btn-primary:hover {
+  background: transparent;
+}
+.btn-rounded {
+  margin-top: 1rem;
+  border-radius: 2rem;
+  padding: 1rem 1.5rem;
+}
+
 body {
   height: 100vh;
 }
 
 body * {
   font-family: "Lato", sans-serif;
+}
+
+#main-banner {
+  height: 85vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/office.jpg") no-repeat center/cover;
+}
+#main-banner .nav-container {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 1.5rem 2rem;
+  background: #000000;
+  z-index: 1;
+}
+#main-banner .nav-container .brand {
+  color: #ffffff;
+  font-size: 2rem;
+}
+#main-banner .nav-container-navbar {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+#main-banner .nav-container-navbar li {
+  margin: 5px 10px;
+}
+#main-banner .nav-container-navbar li a {
+  color: #ffffff;
+}
+#main-banner .nav-container .fas.fa-bars {
+  font-size: 2rem;
+  color: #ffffff;
+  display: none;
+}
+
+.title-container {
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.title-container h2 {
+  font-size: 3rem;
+}
+.title-container h1 {
+  font-size: 4rem;
+  margin-top: 1rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
