--- a/css/styles.css
+++ b/css/styles.css
@@ -229,4 +229,51 @@ body * {
   font-size: 0.9rem;
 }
 
+footer {
+  background: #1d1d1d;
+  color: #8b8e94;
+  padding: 5rem 2rem;
+}
+footer .footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+footer .footer-container .footer-title {
+  color: #ffffff;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+footer .footer-container .footer-desc-container, footer .footer-container .footer-links-container {
+  width: 50%;
+}
+footer .footer-container .footer-desc-container p {
+  width: 80%;
+  line-height: 1.3;
+}
+footer .footer-container .footer-links-container {
+  display: flex;
+}
+footer .footer-container .footer-links-container-list {
+  padding: 0 1rem;
+}
+footer .footer-container .footer-links-container-list li {
+  margin-bottom: 0.5rem;
+}
+footer .footer-container .footer-links-container-list li a {
+  color: #8b8e94;
+  transition: 0.5s;
+}
+footer .footer-container .footer-links-container-list li a:hover {
+  color: #ffffff;
+}
+footer .footer-container .footer-copyright-container {
+  width: 100%;
+  margin-top: 3rem;
+}
+footer .footer-container .footer-copyright-container p {
+  margin-bottom: 1rem;
+}
+
 /*# sourceMappingURL=styles.css.map */
