--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -172,3 +172,50 @@ body *
       color: #ffffff
       padding: 1rem
       font-size: 0.9rem
+
+footer
+  background: $footer-bg
+  color: $text-color
+  padding: 5rem 2rem
+
+  .footer-container
+    max-width: 1200px
+    margin: 0 auto
+    display: flex
+    flex-wrap: wrap
+
+    .footer-title
+      color: #ffffff
+      font-weight: bold
+      margin-bottom: 1rem
+
+    .footer-desc-container, .footer-links-container
+      width: 50%
+
+    .footer-desc-container
+      p
+        width: 80%
+        line-height: 1.3
+
+    .footer-links-container
+      display: flex
+
+      &-list
+        padding: 0 1rem
+
+        li
+          margin-bottom: 0.5rem
+
+          a
+            color: $text-color
+            transition: 0.5s
+
+            &:hover
+              color: #ffffff
+
+    .footer-copyright-container
+      width: 100%
+      margin-top: 3rem
+
+      p
+        margin-bottom: 1rem
