--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,11 @@ ul {
 .jobs-container .jobs-list .other-jobs-container .job-card .job-card-title, .jobs-container .jobs-list .first-job .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-cover, .jobs-container .jobs-list .first-job .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-description, .jobs-container .jobs-list .first-job .job-card-description {
   opacity: 0;
 }
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .other-jobs-container .job-card .job-card-title, .jobs-container .jobs-list .first-job .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-cover, .jobs-container .jobs-list .first-job .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-description, .jobs-container .jobs-list .first-job .job-card-description {
+    opacity: 1;
+  }
+}
 .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-title, .jobs-container .jobs-list .first-job:hover .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-cover, .jobs-container .jobs-list .first-job:hover .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-description, .jobs-container .jobs-list .first-job:hover .job-card-description {
   opacity: 1;
 }
@@ -78,6 +83,11 @@ body * {
   height: 85vh;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/office.jpg") no-repeat center/cover;
 }
+@media (max-width: 425px) {
+  #main-banner {
+    height: 100vh;
+  }
+}
 #main-banner .nav-container {
   display: flex;
   justify-content: space-between;
@@ -88,6 +98,16 @@ body * {
   padding: 1.5rem 2rem;
   background: #000000;
   z-index: 1;
+}
+@media (max-width: 425px) {
+  #main-banner .nav-container {
+    padding: 1rem;
+  }
+}
+@media (max-width: 425px) {
+  #main-banner .nav-container nav {
+    display: none;
+  }
 }
 #main-banner .nav-container .brand {
   color: #ffffff;
@@ -109,6 +129,11 @@ body * {
   color: #ffffff;
   display: none;
 }
+@media (max-width: 425px) {
+  #main-banner .nav-container .fas.fa-bars {
+    display: block;
+  }
+}
 
 .title-container {
   color: #ffffff;
@@ -117,6 +142,12 @@ body * {
   align-items: center;
   justify-content: center;
   height: 100%;
+}
+@media (max-width: 425px) {
+  .title-container {
+    text-align: center;
+    padding: 2rem;
+  }
 }
 .title-container h2 {
   font-size: 3rem;
@@ -137,12 +168,23 @@ body * {
   justify-content: space-around;
   padding: 2rem;
 }
+@media (max-width: 425px) {
+  .services-container .services-card-container {
+    padding: 2rem 0;
+  }
+}
 .services-container .services-card-container .services-card {
   width: 30%;
   margin: 1%;
   padding: 2rem;
   border: 1px solid #cccccc;
   transition: 0.3s;
+}
+@media (max-width: 425px) {
+  .services-container .services-card-container .services-card {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
 .services-container .services-card-container .services-card i {
   color: #ff5200;
@@ -167,9 +209,19 @@ body * {
   background: #e5eaff;
   padding: 3rem;
 }
+@media (max-width: 425px) {
+  .jobs-container {
+    padding: 2rem;
+  }
+}
 .jobs-container .jobs-list {
   display: flex;
   padding: 2rem 0;
+}
+@media (max-width: 425px) {
+  .jobs-container .jobs-list {
+    flex-direction: column;
+  }
 }
 .jobs-container .jobs-list .first-job {
   width: 30%;
@@ -180,10 +232,24 @@ body * {
   cursor: pointer;
   transition: 0.5s;
 }
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .first-job {
+    width: 100%;
+    height: 200px;
+    margin: 0;
+    margin-bottom: 2rem;
+  }
+}
 .jobs-container .jobs-list .other-jobs-container {
   display: flex;
   flex-wrap: wrap;
   width: 68%;
+}
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .other-jobs-container {
+    width: 100%;
+    flex-direction: column;
+  }
 }
 .jobs-container .jobs-list .other-jobs-container .job-card {
   width: 46%;
@@ -192,6 +258,14 @@ body * {
   cursor: pointer;
   margin-bottom: 15px;
   margin-right: 15px;
+}
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .other-jobs-container .job-card {
+    width: 100%;
+    height: 200px;
+    margin: 0;
+    margin-bottom: 2rem;
+  }
 }
 .jobs-container .jobs-list .other-jobs-container #job-2 {
   background-image: url("../img/job2.jpg");
@@ -240,6 +314,12 @@ footer .footer-container {
   display: flex;
   flex-wrap: wrap;
 }
+@media (max-width: 425px) {
+  footer .footer-container {
+    max-width: 100%;
+    flex-direction: column;
+  }
+}
 footer .footer-container .footer-title {
   color: #ffffff;
   font-weight: bold;
@@ -248,15 +328,37 @@ footer .footer-container .footer-title {
 footer .footer-container .footer-desc-container, footer .footer-container .footer-links-container {
   width: 50%;
 }
+@media (max-width: 425px) {
+  footer .footer-container .footer-desc-container, footer .footer-container .footer-links-container {
+    width: 100%;
+    margin-bottom: 2rem;
+    text-align: center;
+  }
+}
 footer .footer-container .footer-desc-container p {
   width: 80%;
   line-height: 1.3;
 }
+@media (max-width: 425px) {
+  footer .footer-container .footer-desc-container p {
+    width: 100%;
+  }
+}
 footer .footer-container .footer-links-container {
   display: flex;
 }
+@media (max-width: 425px) {
+  footer .footer-container .footer-links-container {
+    flex-direction: column;
+  }
+}
 footer .footer-container .footer-links-container-list {
   padding: 0 1rem;
+}
+@media (max-width: 425px) {
+  footer .footer-container .footer-links-container-list {
+    margin-bottom: 2rem;
+  }
 }
 footer .footer-container .footer-links-container-list li {
   margin-bottom: 0.5rem;
@@ -271,6 +373,11 @@ footer .footer-container .footer-links-container-list li a:hover {
 footer .footer-container .footer-copyright-container {
   width: 100%;
   margin-top: 3rem;
+}
+@media (max-width: 425px) {
+  footer .footer-container .footer-copyright-container {
+    text-align: center;
+  }
 }
 footer .footer-container .footer-copyright-container p {
   margin-bottom: 1rem;
