--- a/sass/_utilities.sass
+++ b/sass/_utilities.sass
@@ -1,3 +1,13 @@
+@mixin mobile
+  @media (max-width: 425px)
+    @content
+
+@mixin card-mobile
+  width: 100%
+  height: 200px
+  margin: 0
+  margin-bottom: 2rem
+
 %main-hover
   transition: 0.3s
 
@@ -19,6 +29,9 @@
 %card-hover
   .job-card-title, .job-card-cover, .job-card-description
     opacity: 0
+
+    @include mobile
+      opacity: 1
 
   &:hover
     .job-card-title, .job-card-cover, .job-card-description
