--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -12,6 +12,9 @@ body *
   height: 85vh
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/office.jpg') no-repeat center/cover
 
+  @include mobile
+    height: 100vh
+
   .nav-container
     display: flex
     justify-content: space-between
@@ -22,6 +25,13 @@ body *
     padding: 1.5rem 2rem
     background: $black
     z-index: 1
+
+    @include mobile
+      padding: 1rem
+
+    nav
+      @include mobile
+        display: none
 
     .brand
       color: $light-color
@@ -45,6 +55,9 @@ body *
       color: #ffffff
       display: none
 
+      @include mobile
+        display: block
+
 .title-container
   color: $light-color
   display: flex
@@ -52,6 +65,10 @@ body *
   align-items: center
   justify-content: center
   height: 100%
+
+  @include mobile
+    text-align: center
+    padding: 2rem
 
   h2
     font-size: 3rem
@@ -76,12 +93,19 @@ body *
     justify-content: space-around
     padding: 2rem
 
+    @include mobile
+      padding: 2rem 0
+
     .services-card
       width: 30%
       margin: 1%
       padding: 2rem
       border: 1px solid #cccccc
       transition: 0.3s
+
+      @include mobile
+        width: 100%
+        margin-bottom: 2rem
 
       i
         color: $primary-color
@@ -105,12 +129,18 @@ body *
   background: $secondary-bg
   padding: 3rem
 
+  @include mobile
+    padding: 2rem
+
   h2
     @extend %section-title
 
   .jobs-list
     display: flex
     padding: 2rem 0
+
+    @include mobile
+      flex-direction: column
 
     .first-job
       width: 30%
@@ -123,10 +153,17 @@ body *
       @extend %center-bg
       @extend %card-hover
 
+      @include mobile
+        @include card-mobile
+
     .other-jobs-container
       display: flex
       flex-wrap: wrap
       width: 68%
+
+      @include mobile
+        width: 100%
+        flex-direction: column
 
       .job-card
         width: 46%
@@ -137,6 +174,9 @@ body *
         margin-right: 15px
         @extend %center-bg
         @extend %card-hover
+
+        @include mobile
+          @include card-mobile
 
       #job-2
         background-image: url('../img/job2.jpg')
@@ -184,6 +224,10 @@ footer
     display: flex
     flex-wrap: wrap
 
+    @include mobile
+      max-width: 100%
+      flex-direction: column
+
     .footer-title
       color: #ffffff
       font-weight: bold
@@ -192,16 +236,30 @@ footer
     .footer-desc-container, .footer-links-container
       width: 50%
 
+      @include mobile
+        width: 100%
+        margin-bottom: 2rem
+        text-align: center
+
     .footer-desc-container
       p
         width: 80%
         line-height: 1.3
 
+        @include mobile
+          width: 100%
+
     .footer-links-container
       display: flex
 
+      @include mobile
+        flex-direction: column
+
       &-list
         padding: 0 1rem
+
+        @include mobile
+          margin-bottom: 2rem
 
         li
           margin-bottom: 0.5rem
@@ -216,6 +274,9 @@ footer
     .footer-copyright-container
       width: 100%
       margin-top: 3rem
+
+      @include mobile
+        text-align: center
 
       p
         margin-bottom: 1rem
